--- a/demo/swipe-level.html
+++ b/demo/swipe-level.html
@@ -19,14 +19,13 @@
 
       .slide-box {
          width: 100%;
-         height: 50%;
+         height: 100%;
          overflow: hidden;
          position: relative;
       }
 
       .slide-box li {
          overflow: hidden;
-         float: left;
       }
 
       .slide-box .content img {
@@ -49,13 +48,24 @@
       .swiper-button-next {
          right: 0;
       }
+
+      .slide-content {
+         display: flex;
+         width: 100%;
+         height: 100%;
+         box-sizing: content-box;
+      }
+
+      .slide-content li {
+         flex-shrink: 0;
+      }
    </style>
 </head>
 
 <body>
    <div class="main">
       <div class="slide-box">
-         <ul class="content">
+         <ul class="slide-content">
             <li>
                <img src="slide01.png">
             </li>
@@ -77,7 +87,7 @@
 
          touchBox('.slide-box').swipe({
             direction: "level",
-            // loop: true,
+            loop: true,
             // position: 3,
             autoplay: {
                delay: 2500,
