--- a/demo/swipe-level.html
+++ b/demo/swipe-level.html
@@ -32,6 +32,10 @@
          width: 100%;
       }
 
+      .swiper-button-disable{
+         background-color: #f5f5f5 !important;  
+      }
+
       .swiper-button-next,
       .swiper-button-prev {
          width: 30px;
@@ -65,46 +69,23 @@
 <body>
    <div class="main">
       <div class="slide-box">
-         <ul class="slide-content">
-            <li>
+         <div class="slide-content">
+            <div>
                <img src="slide01.png">
-            </li>
-            <li>
+            </div>
+            <div>
                <img src="slide02.png">
-            </li>
-            <li>
+            </div>
+            <div>
                <img src="slide03.png">
-            </li>
-         </ul>
+            </div>
+         </div>
          <div class="swiper-button-prev"></div>
          <div class="swiper-button-next"></div>
       </div>
-
+      <script type="module" src="./swipe.js"></script>
    </div>
-   <script src="../dist/bundle.js"></script>
-   <script>
-      window.addEventListener("load", function () {
 
-         touchBox('.slide-box').swipe({
-            direction: "level",
-            loop: true,
-            // position: 3,
-            autoplay: {
-               delay: 2500,
-               disableOnInteraction: false,
-            },
-            transitionDuration: 200,
-            pagination: {
-               el: '.swiper-pagination',
-            },
-            navigation: {
-               nextEl: '.swiper-button-next',
-               prevEl: '.swiper-button-prev',
-            }
-         })
-
-      }, false)
-   </script>
 </body>
 
 </html>
