--- a/demos/slide/leve/index.html
+++ b/demos/slide/leve/index.html
@@ -19,25 +19,20 @@
 
       .slide-box {
          width: 100%;
-         height: 100%;
+         height: 160px;
          overflow: hidden;
          position: relative;
       }
 
-      .slide-box li {
-         overflow: hidden;
+      .slide-content {
+         display: flex;
+         /* width: 100%; */
+         height: 100%;
+         box-sizing: content-box;
       }
 
-      .slide-box .content img {
-         width: 100%;
-      }
-
-      .swiper-button-disable{
-         background-color: #f5f5f5 !important;  
-      }
-
-      .swiper-button-next,
-      .swiper-button-prev {
+      .slide-button-next,
+      .slide-button-prev {
          width: 30px;
          height: 60px;
          position: absolute;
@@ -45,23 +40,27 @@
          top: 50%;
       }
 
-      .swiper-button-prev {
+      .slide-button-prev {
          left: 0;
       }
 
-      .swiper-button-next {
+      .slide-button-next {
          right: 0;
       }
 
-      .slide-content {
-         display: flex;
-         width: 100%;
-         height: 100%;
-         box-sizing: content-box;
+      .slide-button-disable{
+         background-color: #f5f5f5 !important;  
       }
 
-      .slide-content li {
+      .slide-content-item{
+         flex-grow: 1;
          flex-shrink: 0;
+         width: 100%;
+         height: 100%;
+      }
+
+      .slide-content-item img{
+         width: 100%;
       }
    </style>
 </head>
@@ -70,20 +69,20 @@
    <div class="main">
       <div class="slide-box">
          <div class="slide-content">
-            <div>
-               <img src="slide01.png">
+            <div class="slide-content-item">
+               <img src="/demos/01.png">
             </div>
-            <div>
-               <img src="slide02.png">
+            <div class="slide-content-item">
+               <img src="/demos/02.png">
             </div>
-            <div>
-               <img src="slide03.png">
+            <div class="slide-content-item">
+               <img src="/demos/03.png">
             </div>
          </div>
-         <div class="swiper-button-prev"></div>
-         <div class="swiper-button-next"></div>
+         <div class="slide-button-prev"></div>
+         <div class="slide-button-next"></div>
       </div>
-      <script type="module" src="./swipe.js"></script>
+      <script type="module" src="./index.js"></script>
    </div>
 
 </body>
